<resources>
    <string name="app_name">Oglasnik Instrukcija</string>
    <string name="login">Prijava</string>
    <string name="signup">Registracija</string>
    <string name="email_example">Username</string>
    <string name="pass_hint">Password</string>
    <string name="portrait">Korisnički portret</string>
    <string name="your_image">Vaša slika</string>
    <string name="click_to_add">(dodirnite za izmjenu)</string>
    <string name="name_hint">Ime i prezime</string>
    <string name="username_hint">Korisničko ime</string>
    <string name="password_hint">Lozinka</string>
    <string name="repeat_password_hint">Ponovi lozinku</string>
    <string name="email_hint">example@example.exp</string>
    <string name="phone_hint">Broj telefona (opcionalno)</string>
    <string name="town_hint">Mjesto</string>
    <string name="street_hint">Ulica</string>
    <string name="number_hint">Broj</string>
    <string name="current_location">Trenutna lokacija</string>
    <string name="map">Mapa</string>
    <string name="about_hint">O sebi</string>
    <string name="cancel">Odustani</string>
    <string name="confirm">Potvrdi</string>
    <string name="edit_data">Uredi podatke</string>
    <string name="logout">Odjava</string>
    <string name="my_classes">Moji predmeti:</string>
    <string name="add_class">+</string>
    <string name="start_search">Pretraži</string>
    <string name="search_instructor">Nađi instruktora</string>
    <string name="by_class">Po predmetu</string>
    <string name="by_town">Po gradu</string>
    <string name="by_distance">Po udaljenosti</string>
    <string name="filter_by">Filtriraj pretragu</string>
    <string name="refresh">Osvježi</string>
    <string name="results">Rezultati:</string>
    <string name="add_subject">Dodaj predmet</string>
    <string name="subject_name">Ime predmeta</string>
    <string name="subject_tags">Oznake</string>
    <string name="remove_item">Brisanje stavke</string>
    <string name="really_remove">Jeste li sigurni?</string>
    <string name="no">Ne</string>
    <string name="yes">Da</string>
    <string name="show_on_map">Prikaži na mapi</string>
    <string name="subjects">Predmeti</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="call">Poziv</string>
</resources>
