<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imgSignupPortrait"
        android:layout_width="@dimen/thumbnail_size1"
        android:layout_height="@dimen/thumbnail_size1"
        android:contentDescription="@string/portrait"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_to_add"
        android:layout_marginBottom="@dimen/small_padding"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:layout_width="@dimen/signup_input_size1"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_hint"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="@dimen/signup_input_size1"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:layout_toRightOf="@id/etName"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/signup_input_size1"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_below="@id/etName"
            android:layout_marginBottom="@dimen/small_padding"/>

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="@dimen/signup_input_size1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_hint"
            android:layout_alignTop="@id/etPassword"
            android:layout_alignLeft="@id/etUserName"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/signup_input_size2"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginBottom="@dimen/small_padding"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="@dimen/signup_input_size2"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_hint"
        android:layout_marginBottom="@dimen/small_padding"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTown"
            android:layout_width="@dimen/signup_input_size3"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/town_hint"/>

        <EditText
            android:id="@+id/etStreet"
            android:layout_width="@dimen/signup_input_size3"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/street_hint"
            android:layout_below="@id/etTown"/>

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="@dimen/signup_input_size3"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/number_hint"
            android:layout_below="@id/etStreet"/>

        <Button
            android:id="@+id/bCurrentLocation"
            android:layout_width="@dimen/signup_button_location_hsize"
            android:layout_height="@dimen/signup_button_location_vsize"
            android:layout_alignParentRight="true"
            android:text="@string/current_location"/>
        <Button
            android:id="@+id/bMap"
            android:layout_width="@dimen/signup_button_location_hsize"
            android:layout_height="@dimen/signup_button_location_vsize"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bCurrentLocation"
            android:text="@string/map"/>
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_input_vsize"
        android:inputType="text"
        android:hint="@string/about_hint"
        android:gravity="top"
        android:layout_marginBottom="@dimen/small_padding"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bCancel"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/bConfirm"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>
