<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical">

    <EditText
        android:id="@+id/etLoginUserName"
        android:layout_width="@dimen/login_input_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/email_example"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="@dimen/login_input_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"/>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="@dimen/login_button_size"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="@dimen/login_button_size"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_gravity="center"/>
</LinearLayout>
