<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding">

        <ImageView
            android:id="@+id/imgMyPortrait"
            android:layout_width="@dimen/thumbnail_size1"
            android:layout_height="@dimen/thumbnail_size1"
            android:contentDescription="@string/portrait"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"/>

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgMyPortrait"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/tvMyUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgMyPortrait"
            android:layout_below="@id/tvMyName"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/tvMyEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgMyPortrait"
            android:layout_below="@id/tvMyUsername"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <Button
            android:id="@+id/bEditData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_data"
            android:layout_below="@id/imgMyPortrait"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"/>

        <Button
            android:id="@+id/bLogout"
            android:layout_width="@dimen/profile_button_size"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_below="@id/imgMyPortrait"
            android:layout_toRightOf="@id/bEditData" />

        <TextView
            android:id="@+id/tvClassesHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_classes"
            android:textSize="@dimen/large_text"
            android:layout_below="@id/bEditData"/>

        <ListView
            android:id="@+id/lvMySubjects"
            android:layout_width="@dimen/classes_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvClassesHeading">
        </ListView>

        <Button
            android:id="@+id/bAddSubject"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"
            android:text="@string/add_class"
            android:layout_alignTop="@id/lvMySubjects"
            android:layout_toRightOf="@id/lvMySubjects"
            android:layout_marginLeft="@dimen/small_padding"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSearchHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_instructor"
            android:textSize="@dimen/large_text"
            android:layout_marginBottom="@dimen/small_padding" />

        <EditText
            android:id="@+id/etSearchSubject"
            android:layout_width="@dimen/filter_input_size"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvSearchHeading"/>

        <EditText
            android:id="@+id/etSearchTown"
            android:layout_width="@dimen/filter_input_size"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etSearchSubject"/>

        <EditText
            android:id="@+id/etSearchDistance"
            android:layout_width="@dimen/filter_input_size"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_alignParentRight="true"
            android:layout_below="@id/etSearchTown"/>

        <TextView
            android:id="@+id/tvSearchSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_class"
            android:textSize="@dimen/medium_text"
            android:layout_alignBaseline="@id/etSearchSubject"/>

        <TextView
            android:id="@+id/tvSearchTown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_town"
            android:textSize="@dimen/medium_text"
            android:layout_alignBaseline="@id/etSearchTown" />

        <TextView
            android:id="@+id/tvSearchDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_distance"
            android:textSize="@dimen/medium_text"
            android:layout_alignBaseline="@id/etSearchDistance"/>

        <Button
            android:id="@+id/bStartSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_search"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/medium_padding"
            android:layout_below="@id/etSearchDistance"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>
