<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding">

        <ImageView
            android:id="@+id/imgPortrait"
            android:layout_width="@dimen/thumbnail_size1"
            android:layout_height="@dimen/thumbnail_size1"
            android:contentDescription="@string/portrait"
            android:layout_marginRight="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgPortrait"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgPortrait"
            android:layout_below="@id/tvName"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgPortrait"
            android:layout_below="@id/tvUsername"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgPortrait"
            android:layout_below="@id/tvEmail"
            android:text="@string/app_name"
            android:textSize="@dimen/medium_text"/>

        <LinearLayout
            android:id="@+id/ltLocation"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhoneNumber"
            android:padding="@dimen/small_padding">

            <TextView
                android:id="@+id/tvTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSubjectsHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects"
            android:textSize="@dimen/large_text"
            android:layout_below="@id/ltLocation"/>

        <ListView
            android:id="@+id/lvSubjects"
            android:layout_width="match_parent"
            android:layout_height="@dimen/classes_height"
            android:layout_below="@id/tvSubjectsHeading">
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/bSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <Button
            android:id="@+id/bSendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"/>

        <Button
            android:id="@+id/bCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"/>
    </LinearLayout>
</LinearLayout>
